--- a/ApiEscuelaFront/login.html
+++ b/ApiEscuelaFront/login.html
@@ -17,6 +17,7 @@
             <input type="password" id="password" name="password" required placeholder="Contraseña">
         </div>
         <button type="submit">Ingresar</button>
+        <div><h3 id="loguinresultcontainer"></h3></div>
     </form>
 
     <script src="main.js"></script>
